kubernetes/dashboard-api.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dashboard-api
  namespace: cert-manager
  labels:
    app: dashboard
    tier: backend
    version: "7"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
      tier: backend
  template:
    metadata:
      labels:
        app: dashboard
        tier: backend
    spec:
      containers:
        - name: dashboard-api
          image: eu.gcr.io/tablespotter/api:$COMMIT_ID
          ports:
            - containerPort: 8181
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8181
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8181
          volumeMounts:
            - name: api-service-iam-json
              mountPath: "/opt/my-old-startups-domain/api-service-iam-json"
              readOnly: true
      volumes:
        - name: api-service-iam-json
          secret:
            secretName: api-service-iam-json
---
kind: Service
apiVersion: v1
metadata:
  name: dashboard-api-service
  namespace: cert-manager
  labels:
    app: dashboard
    tier: backend
    version: "7"
spec:
  selector:
    app: dashboard
    tier: backend
  type: NodePort
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8181
