kubernetes/hub-frontend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hub-frontend
  namespace: cert-manager
  labels:
    app: hub
    tier: frontend
    version: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub
      tier: frontend
  template:
    metadata:
      labels:
        app: hub
        tier: frontend
    spec:
      containers:
      - name: hub-frontend
        image: eu.gcr.io/tablespotter/hub-frontend:$COMMIT_ID
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: hub-frontend-service
  namespace: cert-manager
  labels:
    app: hub
    tier: frontend
spec:
  selector:
    app: hub
    tier: frontend
  type: NodePort
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080
