kubernetes/nextcloud.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nextcloud
  namespace: cert-manager
  labels:
    app: nextcloud
    tier: infra
    version: "7"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      tier: infra
  template:
    metadata:
      labels:
        app: nextcloud
        tier: infra
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        ports:
        - containerPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: nextcloud-service
  namespace: cert-manager
  labels:
    app: nextcloud
    tier: infra
    version: "7"
spec:
  selector:
    app: nextcloud
    tier: infra
  type: NodePort
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080
